<resources>
    <string name="app_name">BestAge60+</string>
    <string name="funatiMain">
        <b>ATIVIDADES REALIZADAS</b> \n<b>ENSINO:</b> Capacita profissionais para atuarem no âmbito
        do envelhecimento com Cursos de Especialização em Gerontologia e Saúde do Idoso, além de
        viabilizar programas de planejamento para aposentadorias em instituições públicas e privadas
        \n<b>PESQUISA:</b> investe em pesquisa sobre envelhecimento de populações ribeirinhas
        amazônicas em parceria com Universidades do Brasil e do exterior. \n<b>EXTENSÃO:</b> Oferece
        semestralmente em sua sede e nos Centros de Convivências do Idoso parceiros do Estado do
        Amazonas mais de 3.000 matrículas destinadas a pessoas com idade igual ou superior a 50 anos
        de idade , por meio de oficinas e cursos gratuitos, como aulas de inglês, informática, aulas
        de danças, atividades físicas, geronturismo, aulas de teatro. \n<b>POLICLÍNICA FUNATI:</b>
        Proporciona assistência de saúde para comunidade por meio de sua própria policlínica que
        realiza em média 40 atendimentos especializados por dia, oferecendo serviços de nutrição,
        fisioterapia, psicologia e outros de atenção básica. </string>
    <string name="funatiTitle">
        <b>Fundação Universidade Aberta da Terceira Idade</b>
    </string>
    <string name="txtTitleSeniorCitizenConcilActivity">
        <b>Conselho Municipal do Idoso</b>
    </string>
    <string name="txtMainSeniorCitizenConcilActivity">
        O Conselho Municipal do Idoso – CMI –, foi criado pela Lei nº 628, de 8 de novembro de 2001.
        É um órgão colegiado de caráter consultivo, deliberativo e controlador da política de defesa
        dos direitos do idoso, veiculado à Fundação Dr. Thomas, responsável pela coordenação e
        execução da política municipal de defesa dos direitos do idoso.
        São competências do Conselho Municipal do Idoso:\n
        I – a definição de diretrizes, deliberação, acompanhamento e controle da Política Municipal
        do Idoso;
        \nII – a proteção e defesa dos direitos do Idoso, observada a legislação em vigor,
        corroborando para a sua plena inserção na vida sócio-econômica e político-cultural do
        Município de Manaus, objetivando, ainda, a eliminação de preconceitos;
        \nIII – a indicação de prioridades de atuação e de definição da aplicação dos recursos
        públicos municipais destinados às políticas sociais básicas de atenção ao Idoso;
        \nIV – a aprovação da proposta orçamentária do Município a ser encaminhada pelo órgão
        coordenador da Política Municipal do Idoso;
        \nV – a proposição aos poderes constituídos de modificações nas estruturas dos órgãos
        governamentais diretamente ligados à promoção, proteção e defesa dos direitos do Idoso;
        \nVI – o oferecimento de subsídios para a elaboração de leis atinentes aos interesses dos
        Idosos;
        \nVII – a constante interface com os Conselhos de Direitos e de Políticas Setoriais;
        \nVIII – o incentivo e o apoio à realização de eventos, estudos e pesquisas no campo da
        promoção, da proteção e da defesa dos direitos do Idoso;
        \nIX – a promoção de intercâmbio com entidades públicas, particulares, organismos nacionais,
        internacionais e estrangeiros, visando atender a seus objetivos;
        \nX – o pronunciamento, a emissão de pareceres e a prestação de informações sobre assuntos
        que digam respeito à promoção, à proteção e à defesa dos direitos do idoso;
        \nXI – a elaboração e aprovação do seu Regimento Interno;
        \nXII – a aprovação, de acordo com critérios estabelecidos em seu regimento interno, do
        cadastramento de entidades de defesa ou de atendimento ao Idoso que pretendam integrar o
        Conselho;
        \nXIII – o recebimento de petições, denúncias, reclamações, representações ou queixas de
        qualquer pessoa por desrespeito aos direitos assegurados aos Idosos, adotando as medidas
        cabíveis;
        \nXIV – a convocação a Fórum das Entidades Não-Governamentais, para eleição dos seus
        representantes no Conselho;
        \nO Conselho é constituído, paritariamente, por 08 (oito) representantes de Organizações
        Governamentais e 08 (oito) de Organização não-governamentais.\n
        \nPresidente: Márcia Santos.\n
        O Conselho Municipal do Idoso funciona no Centro Social Urbano – Parque 10 de Novembro, na
        avenida Perimetral, nº 22 – Conjunto Castelo Branco. Telefone para contato: (92) 98844-5148
    </string>
    <string name="txtTitleEderlyLawActivity">
        <b>LEI Nº 10.741 DE 01 DE OUTUBRO DE 2003</b>
    </string>
    <string name="txtTitleConceptOfTheBestAgeActivity">
        <b>O que é terceira idade e quais os cuidados ao chegar nessa fase?</b>
    </string>
    <string name="txtMainConceptOfTheBestAgeActivity"> Enquanto alguns veem o envelhecimento como
        algo negativo, outros entendem essa fase da vida como um sinal de liberdade e uma época de
        novas possibilidades.\n A diferença entre eles é a forma como enxergam as coisas e como agem
        com relação a isso.\n É claro que, nessa etapa, alguns cuidados especiais devem ser tomados
        para que se tenha qualidade de vida, apesar das limitações que a terceira idade pode
        acarretar.\n Por isso, neste post, iremos explicar exatamente o que é terceira idade e quais
        os cuidados ao chegar nessa fase. Continue a leitura e confira!\n
    </string>
    <string name="txtMainConceptOfTheBestAgeActivity1">
        <b>\nO que é terceira idade?\n\n</b> O termo terceira idade surgiu na França, em 1962,
        quando a política de integração social que visava à transformação da imagem da velhice foi
        introduzida.\n Terceira idade pode ser considerada a fase entre a aposentadoria e o
        envelhecimento, e é uma etapa em que o corpo humano perde em muito sua capacidade de
        regeneração, necessitando uma série de cuidados especiais.\n Porém, devido aos avanços da
        medicina e da qualidade de vida, está cada vez mais difícil estabelecer uma idade específica
        para o início da terceira idade, já que as pessoas estão chegando lá cada vez mais fortes,
        ativas e saudáveis.\n </string>
    <string name="txtMainEderlyLawActivity">
        <b>Data de assinatura:</b> 01 de Outubro de 2003\n <b>Ementa:</b> DISPÕE SOBRE O ESTATUTO DO
        IDOSO E DÁ OUTRAS PROVIDÊNCIAS.\n <b>Situação:</b> Não consta revogação expressa\n <b>Chefe
        de Governo:</b> Luiz Inácio Lula da Silva\n <b>Origem:</b> Legislativo\n <b>Data de
        Publicação:</b> 03 de Outubro de 2003\n <b>Fonte:</b> D.O.U de 03/10/2003, pág. nº 1\n <b>
        Assunto:</b> CRIAÇÃO, ESTATUTO, IDOSO, DEFINIÇÃO, DIREITOS, ASSISTÊNCIA, ATENDIMENTO,
        PRESERVAÇÃO, CIDADANIA, DIREITO A VIDA, DIREITO A SAÚDE, ATIVIDADE CULTURAL, EDUCAÇÃO,
        LAZER, ESPORTE, TRANSPORTE GRATUITO, PRIORIDADE, PROCEDIMENTO JUDICIAL, HABITAÇÃO, PESSOA
        FÍSICA, LIMITE DE IDADE, CONCURSOS.\n <b>Classificação de direito:</b> DIREITO
        CONSTITUCIONAL; DIREITO PREVIDENCIÁRIO. SEGURIDADE SOCIAL; DIREITO PROCESSUAL CIVIL; DIREITO
        PENAL\n </string>
    <string name="txtMainFiveHealthTips">
        Para envelhecer com saúde, alguns cuidados são necessários. A seguir, separamos 5 dicas para
        viver com saúde na terceira idade.
    </string>
    <string name="txtMainFiveHealthTips1">
        <b>1 - Tenha hábitos alimentares saudáveis\n\n</b> Para manter a saúde do idoso em dia, é
        essencial ter uma nutrição adequada. Procure consumir alimentos variados, ricos em
        nutrientes. Uma dieta rica em alimentos de alto valor nutricional, além de promover mais
        bem-estar, fortalece o sistema imunológico e deixa diversas doenças bem longe da sua vida.
        Dessa forma, consuma verduras, legumes, frutas, cereais integrais, carnes brancas, peixes,
        sementes oleaginosas e beba muita água. Na terceira idade, é ainda mais importante se manter
        longe das comidas ultraprocessadas, que são ricas em sódio, açúcar, gorduras, conservantes e
        corantes. Evite massas brancas, frituras, doces em geral, bebidas açucaradas, embutidos,
        carne vermelha em excesso e guloseimas. <b>\n\n2 - Pratique atividades físicas
        regularmente\n\n</b> Manter-se ativo é essencial para quem quer viver bem depois dos 60
        anos, livre de dores musculares e com autonomia no dia a dia. Pessoas sedentárias raramente
        terão qualidade de vida na terceira idade. A prática de atividades físicas deve fazer parte
        da rotina de quem busca envelhecer com saúde. Caminhada, natação, pilates, ciclismo, dança
        de salão, dentre outras atividades, são recomendadas na terceira idade. O ideal é se
        exercitar de 3 a 5 vezes por semana durante 40 minutos. Entretanto, é importante ter o aval
        de um médico e o acompanhamento de um educador físico para evitar lesões. <b>\n\n3 -
            Mantenha em dia as consultas
            e exames de rotina\n\n</b> Investir na prevenção é fundamental para se ter mais saúde na
        terceira idade. O avanço dos anos facilita o surgimento de algumas doenças, por isso, é
        essencial manter as consultas em dia com o médico geriatra, para o diagnóstico precoce e o
        tratamento adequado dos eventuais agravos à saúde. Diversas doenças são assintomáticas, por
        isso, é necessário fazer um check-up periódico. Alguns exames de rotina são obrigatórios
        para quem já passou dos 40 anos e devem ser feitos anualmente. Exames de sangue, próstata,
        mamografia, ultrassom abdominal, eletrocardiograma, teste de esforço, dentre outros, devem
        ser realizados por todas as pessoas que desejam envelhecer com saúde. <b>\n\n4 - Tenha uma
        vida
            social ativa\n\n</b> Quando o assunto é envelhecer com saúde, a vida social também conta
        e muito. Pessoas com idade avançada têm a tendência de diminuir o círculo social e, muitas
        vezes, acabam se isolando. Mas isso não faz bem à saúde mental do idoso, pelo contrário. Por
        isso, procure sempre ter uma vida social ativa, faça amizades, procure interagir com as
        pessoas do seu bairro, frequente locais que promovam eventos, passeie, viaje de vez em
        quando. O importante é investir nos relacionamentos saudáveis e duradouros. <b>\n\n5 -
        Mantenha a mente estimulada, ativa e produtiva\n\n</b> Para se chegar com toda lucidez e
        evitar diversas doenças neurológicas, é preciso cuidar também da saúde mental. Para manter a
        mente ativa, você pode ler, praticar algum instrumento, aprender uma nova língua,
        desenvolver algum trabalho, participar de ações sociais ou praticar jogos que estimulem a
        mente, como o xadrez. Quando cuidamos da nossa saúde mental, as chances de sermos acometidos
        por doenças neurodegenerativas como Alzheimer, Parkinson ou Esclerose Múltipla, por exemplo,
        se reduzem drasticamente. O nosso cérebro também precisa se exercitar, por isso, devemos
        sempre estimular a nossa memória através de atividades diárias que têm essa função. </string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="login">login</string>
    <string name="register">REGISTER</string>
    <string name="logout">logout</string>
    <string name="link">link</string>
    <string name="_5_health_tips_for_people_in_their_60_years">5 Health Tips for People in their 60
        years</string>
    <string name="update_email">Update Email</string>
    <string name="user_delete">Delete User</string>
</resources>