<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_health_tips_for_people_in_their_60_years"
            android:textSize="30sp"
            android:layout_margin="@dimen/text_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMainFiveHealthTips"
            android:textSize="20sp"
            android:layout_margin="@dimen/text_margin"/>

        <ImageView
            android:id="@+id/imgFiveHealthTips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="imgFiveHealthTips" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMainFiveHealthTips1"
            android:textSize="20sp"
            android:layout_margin="@dimen/text_margin"/>

        <Button
            android:id="@+id/btnFiveHealthTipsWeb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:textSize="30sp"
            android:text="@string/link" />

    </LinearLayout>
</ScrollView>