<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTitleConceptOfTheBestAgeActivity"
            android:textSize="30sp"
            android:layout_margin="@dimen/text_margin"/>

        <ImageView
            android:id="@+id/imgConceptOfTheBestAgeActivity1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMainConceptOfTheBestAgeActivity"
            android:textSize="20sp"
            android:layout_margin="@dimen/text_margin"/>

        <Button
            android:id="@+id/btnConceptOfTheBestAgeActivityWeb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:textSize="30sp"
            android:text="@string/link" />

    </LinearLayout>
</ScrollView>