<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ElderlyLawActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBrastra"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="imgBrastra"
            android:src="@drawable/brasao_brasil"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/txtTitleEderlyLawActivity" />

        <TextView
            android:id="@+id/txtMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/txtMainEderlyLawActivity" />

        <Button
            android:id="@+id/btnFooterEderlyLawActivity"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:textSize="30sp"
            android:text="@string/link" />

    </LinearLayout>
</ScrollView>